apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: radarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-oidc@kubernetescrd
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: radarr.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
